Remove news.scss; move News styling to on-page CSS block. (All .css files in this repo are loaded on every page!) Create .card style in partials.scss. Align footer to bottom of screen, preventing blank space below page.

--- a/src/scss/partials.scss
+++ b/src/scss/partials.scss
@@ -57,6 +57,9 @@
 	background-color: #f5f5f5;
 	border-left: 3px solid #ffc527;
 }
+.card {
+	@include card();
+}
 
 // variables
 
